--- a/templates/home.html
+++ b/templates/home.html
@@ -3,6 +3,7 @@
 <div class="shadow p-3 mb-5 bg-white rounded">
   <h1 style="color:rgb(255, 69, 0)">Movie Resemblance Engine</h1>
   <h3 style="color:rgb(0, 69, 0)">Hello!, please search for your favourite movie and we will recommend you with more similar movies along with their similarity score.</h3>
+  <h5 style="color:rgb(0, 69, 0)">(Example : Type Avatar to see similar movies to avatar.)</h5>
 </div>
 
   <form action="{{url_for('recommend')}}">
@@ -11,6 +12,6 @@
     <input type="submit" class="btn btn-info" value="Search">
   </form>
   <div class="shadow p-3 mb-5 bg-white rounded">
-    <h6 style="color:rgb(0, 69, 0)">Made By : Setul Parmar and Ankita Sharma from IIIT - NR</h6>
+    <h6 style="color:rgb(0, 69, 0)">Made By : Setul Parmar from IIIT - NR </h6>
   </div>
 {% endblock %}
